fix button alignment

--- a/prjstyle.css
+++ b/prjstyle.css
@@ -10,18 +10,17 @@ body {
 }
 
 .dropbtn {
+  display: flex;
   background-image: url("images/menu.png");
   color: white;
-  align-self: center;
   padding: 10%;
-<<<<<<< HEAD
   font-size: 16px;
   width: 200px;
   height: 100px;
-=======
   border: none;
   cursor: pointer;
-  align-self: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .dropdown {
